Cursor fix, Dark mode update

--- a/style.css
+++ b/style.css
@@ -36,33 +36,32 @@ body {
   width: 100%;
   flex: 1; /* Take remaining vertical space */
 }
- .text {
-    width: 100%;
-    font-size: 50px;
-    color: rgb(255, 255, 255);
-    letter-spacing: 10px;
-    border-right: 5px solid black;
-    white-space: nowrap;
-    animation: typing 3s steps(10), cursor .4s step-end infinite alternate;
-    overflow: hidden;
-    animation-fill-mode: forwards;
+.text {
+  width: 100%;
+  font-size: 50px;
+  color: rgb(255, 255, 255);
+  letter-spacing: 10px;
+  border-right: 5px solid black;
+  white-space: nowrap;
+  animation: typing 2.5s steps(9), cursor .55s step-end infinite alternate;
+  overflow: hidden;
+  animation-fill-mode: forwards;
+}
+
+@keyframes cursor {
+  from, to { border-color: transparent }
+  50% { border-color: rgb(0, 131, 201); }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 31%;
   }
   
-  @keyframes cursor {
-    50% {
-      border-color: transparent;
-    }
-  }
-  
-  @keyframes typing {
-    from {
-      width: 0;
-    }
-    to {
-      width: 30%;
-    }
-    
-  }
+}
 .text-center{
     margin-left:  auto;
     margin-right: auto ;
@@ -77,8 +76,7 @@ body.light-mode {
 }
 
 body.dark-mode {
-  background: #0f0000; /* Dark mode background color */
-  background-image: url('https://cdn.pixabay.com/photo/2022/07/31/08/03/to-do-7355222_1280.jpg'); /* Dark mode background image (same as light mode) */
+  background-image: url('https://cdn.pixabay.com/photo/2022/07/31/08/03/to-do-7355222_1280.jpg'); /*Dark mode background image (same as light mode)*/
   color: #fff; /* Text color for dark mode */
 }
 
@@ -90,7 +88,7 @@ body.dark-mode::before {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9); /* Adjust the alpha (last) value to control darkness */
+  background-color: rgba(0, 0, 0, 0.75); /* Adjust the alpha (last) value to control darkness */
   z-index: -1;
 }
 
@@ -120,12 +118,35 @@ body.dark-mode::before {
   height: 100%;
   text-align: center;
   padding: 4rem;
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
   border-radius: 2em;
   backdrop-filter: blur(45px);
-  border: 10px solid rgba(0, 0, 0, 0.05);
+  /* border: 10px solid rgba(0, 0, 0, 0.05); */
   background-clip: padding-box;
+  /* box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03); */
+}
+
+.light-mode .main {
+  background: rgba(0, 0, 0, 0.2);
   box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
+  border: 10px solid rgba(0, 0, 0, 0.05);
+}
+
+.dark-mode .main {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 10px 10px 10px rgba(196, 204, 220, 0.03);
+  border: 10px solid rgba(255, 255, 255, 0.05);
+}
+
+.main {
+  position: relative;
+  width: 48rem;
+  height: 100%;
+  text-align: center;
+  padding: 4rem;
+  border-radius: 2em;
+  backdrop-filter: blur(45px);
+  background-clip: padding-box;
 }
 
 .main_form {
